# ChangeLog for sys-apps/file
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.39 2004/04/27 14:13:55 randy Exp $

  27 Apr 2004; Michael McCabe <randy@gentoo.org> file-4.08.ebuild:
  Marked stable on s390

  09 Apr 2004; Travis Tilley <lv@gentoo.org> file-4.06.ebuild:
  stable on amd64

*file-4.08 (23 Mar 2004)

  23 Mar 2004; Martin Holzer <mholzer@gentoo.org> file-4.08.ebuild:
  Version bumped.

  02 Mar 2004; Brian Jackson <iggy@gentoo.org> file-4.07-r1.ebuild:
  adding initial s390 support

  28 Jan 2004; Aron Griffis <agriffis@gentoo.org> file-4.06.ebuild:
  stable on alpha and ia64

*file-4.07-r1 (23 Jan 2004)

  23 Jan 2004; Jared Hudson <jhhudso@gentoo.org> : Added a patch from source
  changes found in the debian file package. This fixes a serious (IMO) bug
  that causes a endless loop (100% cpu usage) when using file against certain
  elf binaries.


  22 Jan 2004; <gustavoz@gentoo.org> file-4.06.ebuild:
  marked stable on sparc

  22 Jan 2004; Martin Holzer <mholzer@gentoo.org> file-4.06.ebuild:
  x86 stable.

  20 Jan 2004; Michael Sterrett <mr_bones_@gentoo.org> file-4.07.ebuild:
  mark the new ebuild all ~

*file-4.07 (20 Jan 2004)

  20 Jan 2004; Michael Sterrett <mr_bones_@gentoo.org> file-4.07.ebuild:
  version bump

  28 Dec 2003; Joshua Kinard <kumba@gentoo.org> file-4.06.ebuild:
  Move to mips stable (~mips -> mips)

  14 Nov 2003; Aron Griffis <agriffis@gentoo.org> file-4.06.ebuild:
  Stable on ia64

*file-4.03 (01 Nov 2003)

  01 Nov 2003; Seemant Kulleen <seemant@gentoo.org> file-3.37.ebuild,
  file-3.39.ebuild, file-4.01.ebuild, file-4.02.ebuild, file-4.03.ebuild,
  file-4.05.ebuild:
  removed old versions, and also changed SRC_URI on file-4.02 point to Gentoo
  mirrors, since upstream doesn't have it available any more. Thanks to: Stony
  Yakovac <stonyy@tek.com> in bug #32513

*file-4.06 (17 Oct 2003)
