@@ -2,17 +2,19 @@ MD5 360110cb914dade4082f7e7964f777e4 ChangeLog 5846
 MD5 559721fdaa4660ca40f22c217f7da739 file-3.41.ebuild 1019
 MD5 da5298f15b5267a578c17faaf71f5b15 file-4.02.ebuild 1021
 MD5 39754f06c0a969328fc4e286ac844761 file-4.06.ebuild 1550
-MD5 725585420a8c43c2472cab207b7f5030 file-4.07-r1.ebuild 1619
-MD5 55ca67dfd18df325e38366b887505f96 file-4.07.ebuild 1571
-MD5 4b058ef33921970a5ac4b0d36758d0cd file-4.08.ebuild 1440
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
+MD5 3ed472097ca94128f28d97b023a14811 file-4.09.ebuild 1443
+MD5 55ca67dfd18df325e38366b887505f96 file-4.07.ebuild 1571
+MD5 725585420a8c43c2472cab207b7f5030 file-4.07-r1.ebuild 1619
+MD5 4b058ef33921970a5ac4b0d36758d0cd file-4.08.ebuild 1440
+MD5 655e5c463709e244970b23b64aaf8bf7 files/digest-file-4.09 61
 MD5 eabc698678353b52ea7d9bfb724d4e1e files/digest-file-3.41 268
 MD5 fd38ae2f761ce496f7caedf3226166ae files/digest-file-4.02 61
 MD5 50700bf6bff49778fd8c6083466a0813 files/digest-file-4.06 61
-MD5 ea5caf65874cda8c3f3d5baace9c73f8 files/digest-file-4.07 61
-MD5 ea5caf65874cda8c3f3d5baace9c73f8 files/digest-file-4.07-r1 61
-MD5 9ab14ea35a2db2864bb6e92d1ca87f17 files/digest-file-4.08 61
 MD5 aff834708f034a4995abba4192e79583 files/file-3.39-gentoo.diff 4673
 MD5 aff834708f034a4995abba4192e79583 files/file-3.41-mips-gentoo.diff 4673
-MD5 8153e3726c4dad50b53c76eaf32b4833 files/file-4.07-gentoo.diff 648
 MD5 8f6cec8c0754678a2817139182637eac files/file-4.xx-mips-gentoo.diff 13035
+MD5 ea5caf65874cda8c3f3d5baace9c73f8 files/digest-file-4.07 61
+MD5 ea5caf65874cda8c3f3d5baace9c73f8 files/digest-file-4.07-r1 61
+MD5 8153e3726c4dad50b53c76eaf32b4833 files/file-4.07-gentoo.diff 648
+MD5 9ab14ea35a2db2864bb6e92d1ca87f17 files/digest-file-4.08 61
