@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/file
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.39 2004/04/27 14:13:55 randy Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.40 2004/04/27 18:39:40 mholzer Exp $
+
+*file-4.09 (27 Apr 2004)
+
+  27 Apr 2004; Martin Holzer <mholzer@gentoo.org> file-4.09.ebuild:
+  Version bumped.
 
   27 Apr 2004; Michael McCabe <randy@gentoo.org> file-4.08.ebuild:
   Marked stable on s390
